Header is in process

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,40 @@
 <body>
     <div class="wrapper">
         <header class="header">
+            <div class="header__container container">
+                <div class="header__wrapper">
+                    <div class="header__logo image-bg">
+                        <a href="#">
+                            <img src="./img/header/logo.svg" alt="WS Hosting логотип">
+                        </a>
+                    </div>
+                    <ul class="header__contacts">
+                        <li class="header__phone contact">
+                            <div class="contact__icon">
+                                <img src="./img/header/phone.svg" alt="телефон">
+                            </div>
+                            <div class="contact__contact">
+                                <a href="tel:+7(495)123-45-56">+7 (495) 123-45-56</a>
+                            </div>
+                        </li>
+                        <li class="header__phone contact">
+                            <div class="contact__icon">
+                                <img src="./img/header/email.svg" alt="электронная почта">
+                            </div>
+                            <div class="contact__contact">
+                                <a href="mailto:support@wshost.ru">support@wshost.ru</a>
+                                <p class="contact__contact_footnote">(поддержка 24/7)</p>
+                            </div>
+                        </li>
+                    </ul>
+                    <button class="header__button button">
+                        Купить хостинг
+                    </button>
+                    <button class="header__login">
+                        <img src="./img/header/login.svg" alt="личный кабинет">
+                    </button>
+                </div>
+            </div>
         </header>
         <main class="main">
 
