Promo section done responsive

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
                         </li>
                     </ul>
                     <div class="header__buttons col-5 col-xl-6">
-                        <button class="header__button button button-text button-text_small">
+                        <button class="header__button button button_blue button-text button-text_small">
                             Купить хостинг
                         </button>
                         <button class="header__login">
@@ -79,7 +79,34 @@
             </nav>
         </header>
         <main class="main">
-
+            <section class="promo">
+                <div class="promo__container container">
+                    <div class="promo__image">
+                        <img src="./img/promo/seververs.svg" alt="серверы">
+                    </div>
+                    <div class="promo__content">
+                        <h1 class="promo__title">Платный хостинг <br> для сайта</h1>
+                        <div class="promo__text">
+                            <p class="main-text">Совместим с любыми CMS:<br><span>1С-Битрикс, Wordpress, Opencart,
+                                    DLE, Joomla и др.</span></p>
+                            <p class="main-text">Всё включено:<br><span>PHP 5.4 – 8.0, Perl, FTP, MySQL, ISPManager
+                                </span></p>
+                        </div>
+                        <div class="promo__buttons">
+                            <div class="promo__price">
+                                Всего от <span>99 ₽ в месяц!</span>
+                            </div>
+                            <button class="promo__button button button-text button-text_small">
+                                Заказать хостинг
+                            </button>
+                            <div class="promo__arrow">
+                                <img src="./img/promo/arrow.svg"
+                                    alt="стрелочка, указывающая на кнопку Заказать хостинг">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
 
