--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,180 @@
                     </div>
                 </div>
             </section>
+            <section class="tariff">
+                <div class="tariff__container container">
+                    <h2 class="tariff__title header-2">Тарифы на хостинг</h2>
+                    <div class="tariff__about main-text">
+                        <p>У нас оптимальные тарифы на классический виртуальный хостинг с безлимитными ресурсами на
+                            количество сайтов, баз данных и FTP. </p>
+                        <p>Выбирайте наш лучший <span class="main-text_semibold">безлимитный</span> хостинг в России!
+                        </p>
+                    </div>
+                    <ul class="tariff__names row">
+                        <li class="tariff__block col-3">
+                            <div class="tariff-block">
+                                <div class="tariff-block__image">
+                                    <img src="./img/tariff/baloon.svg" alt="воздушный шар">
+                                </div>
+                                <div class="tariff-block__name header-3">мини</div>
+                            </div>
+                        </li>
+                        <li class="tariff__block col-3">
+                            <div class="tariff-block">
+                                <div class="tariff-block__image tariff-block__image_start">
+                                    <img src="./img/tariff/paper-airplane.svg" alt="бумажный самолётик">
+                                </div>
+                                <div class="tariff-block__name header-3">старт</div>
+                            </div>
+                        </li>
+                        <li class="tariff__block col-3">
+                            <div class="tariff-block">
+                                <div class="tariff-block__image tariff-block__image_standart">
+                                    <img src="./img/tariff/helicopter.svg" alt="вертолет">
+                                </div>
+                                <div class="tariff-block__name header-3">стандарт</div>
+                            </div>
+                        </li>
+                        <li class="tariff__block col-3">
+                            <div class="tariff-block">
+                                <div class="tariff-block__image tariff-block__image_business">
+                                    <img src="./img/tariff/rocket.svg" alt="космическая ракета">
+                                </div>
+                                <div class="tariff-block__name header-3">бизнес</div>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="tariff__infinity main-text">
+                        Неограниченно сайтов, баз данных MySQL, FTP аккаунтов и почтовых ящиков
+                    </div>
+                    <ul class="tariff__characteristics row">
+                        <li class="tariff__description col-3">
+                            <div class="tariff-description">
+                                <div class="tariff-description__top">
+                                    <p class="tariff-description__space main-text main-text_semibold">2Gb места SSD </p>
+                                    <div class="tariff-description__text mini-text">
+                                        <p>PHP - 5.6, 7.0, 7.1, 7.2, 7.3, 7.4</p>
+                                        <p>Поддержка любой CMS</p>
+                                        <p>Бесплатные SSL сертификаты Let's Encrypt</p>
+                                        <p>Защита от DDoS</p>
+                                    </div>
+                                </div>
+                                <div class="tariff-description__bottom">
+                                    <div class="tariff-description__price">
+                                        <div class="tariff-description__new-price">
+                                            <div></div>
+                                            <p class="header-3">99 ₽</p>
+                                            <p>в месяц</p>
+                                        </div>
+                                        <div class="tariff-description__old-price">
+                                            <p>117 ₽</p>
+                                            <p>в месяц</p>
+                                        </div>
+                                    </div>
+                                    <button
+                                        class="tariff-description__button button button_blue button-text button-text_small">Купить
+                                        хостинг</button>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="tariff__description col-3">
+                            <div class="tariff-description">
+                                <div class="tariff-description__top">
+                                    <p class="tariff-description__space main-text main-text_semibold">7Gb места SSD </p>
+                                    <div class="tariff-description__text mini-text">
+                                        <p>PHP - 5.6, 7.0, 7.1, 7.2, 7.3, 7.4</p>
+                                        <p>Поддержка любой CMS</p>
+                                        <p>Бесплатные SSL сертификаты Let's Encrypt</p>
+                                        <p>Защита от DDoS</p>
+                                        <p>Повышенная производительность</p>
+                                        <p>Домен в подарок</p>
+                                    </div>
+                                </div>
+                                <div class="tariff-description__bottom">
+                                    <div class="tariff-description__price">
+                                        <div class="tariff-description__new-price">
+                                            <div></div>
+                                            <p class="header-3">149 ₽</p>
+                                            <p>в месяц</p>
+                                        </div>
+                                        <div class="tariff-description__old-price">
+                                            <p>117 ₽</p>
+                                            <p>в месяц</p>
+                                        </div>
+                                    </div>
+                                    <button
+                                        class="tariff-description__button button button_blue button-text button-text_small">Купить
+                                        хостинг</button>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="tariff__description col-3">
+                            <div class="tariff-description">
+                                <div class="tariff-description__top">
+                                    <p class="tariff-description__space main-text main-text_semibold">30Gb места SSD
+                                    </p>
+                                    <div class="tariff-description__text mini-text">
+                                        <p>PHP - 5.6, 7.0, 7.1, 7.2, 7.3, 7.4</p>
+                                        <p>Поддержка любой CMS</p>
+                                        <p>Бесплатные SSL сертификаты Let's Encrypt</p>
+                                        <p>Защита от DDoS</p>
+                                        <p>Повышенная производительность</p>
+                                        <p>Домен в подарок</p>
+                                    </div>
+                                </div>
+                                <div class="tariff-description__bottom">
+                                    <div class="tariff-description__price">
+                                        <div class="tariff-description__new-price">
+                                            <div></div>
+                                            <p class="header-3">290 ₽</p>
+                                            <p>в месяц</p>
+                                        </div>
+                                        <div class="tariff-description__old-price">
+                                            <p>117 ₽</p>
+                                            <p>в месяц</p>
+                                        </div>
+                                    </div>
+                                    <button
+                                        class="tariff-description__button button button_blue button-text button-text_small">Купить
+                                        хостинг</button>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="tariff__description col-3">
+                            <div class="tariff-description">
+                                <div class="tariff-description__top">
+                                    <p class="tariff-description__space main-text main-text_semibold">50Gb места SSDgit
+                                    </p>
+                                    <div class="tariff-description__text mini-text">
+                                        <p>PHP - 5.6, 7.0, 7.1, 7.2, 7.3, 7.4</p>
+                                        <p>Поддержка любой CMS</p>
+                                        <p>Бесплатные SSL сертификаты Let's Encrypt</p>
+                                        <p>Защита от DDoS</p>
+                                        <p>Повышенная производительность</p>
+                                        <p>Домен в подарок</p>
+                                    </div>
+                                </div>
+                                <div class="tariff-description__bottom">
+                                    <div class="tariff-description__price">
+                                        <div class="tariff-description__new-price">
+                                            <div></div>
+                                            <p class="header-3">470 ₽</p>
+                                            <p>в месяц</p>
+                                        </div>
+                                        <div class="tariff-description__old-price">
+                                            <p>117 ₽</p>
+                                            <p>в месяц</p>
+                                        </div>
+                                    </div>
+                                    <button
+                                        class="tariff-description__button button button_blue button-text button-text_small">Купить
+                                        хостинг</button>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <footer class="footer">
 
