Tariffs section ready. Responsive

--- a/src/index.html
+++ b/src/index.html
@@ -116,8 +116,8 @@
                         <p>Выбирайте наш лучший <span class="main-text_semibold">безлимитный</span> хостинг в России!
                         </p>
                     </div>
-                    <ul class="tariff__names row">
-                        <li class="tariff__block col-3">
+                    <ul class="tariff__names row hide">
+                        <li class="tariff__block col-sm-6 col-lg-3">
                             <div class="tariff-block">
                                 <div class="tariff-block__image">
                                     <img src="./img/tariff/baloon.svg" alt="воздушный шар">
@@ -125,7 +125,7 @@
                                 <div class="tariff-block__name header-3">мини</div>
                             </div>
                         </li>
-                        <li class="tariff__block col-3">
+                        <li class="tariff__block col-sm-6 col-lg-3">
                             <div class="tariff-block">
                                 <div class="tariff-block__image tariff-block__image_start">
                                     <img src="./img/tariff/paper-airplane.svg" alt="бумажный самолётик">
@@ -133,7 +133,7 @@
                                 <div class="tariff-block__name header-3">старт</div>
                             </div>
                         </li>
-                        <li class="tariff__block col-3">
+                        <li class="tariff__block col-sm-6 col-lg-3 hide-m">
                             <div class="tariff-block">
                                 <div class="tariff-block__image tariff-block__image_standart">
                                     <img src="./img/tariff/helicopter.svg" alt="вертолет">
@@ -141,7 +141,7 @@
                                 <div class="tariff-block__name header-3">стандарт</div>
                             </div>
                         </li>
-                        <li class="tariff__block col-3">
+                        <li class="tariff__block col-sm-6 col-lg-3 hide-m">
                             <div class="tariff-block">
                                 <div class="tariff-block__image tariff-block__image_business">
                                     <img src="./img/tariff/rocket.svg" alt="космическая ракета">
@@ -150,11 +150,11 @@
                             </div>
                         </li>
                     </ul>
-                    <div class="tariff__infinity main-text">
+                    <div class="tariff__infinity main-text hide-block">
                         Неограниченно сайтов, баз данных MySQL, FTP аккаунтов и почтовых ящиков
                     </div>
-                    <ul class="tariff__characteristics row">
-                        <li class="tariff__description col-3">
+                    <ul class="tariff__characteristics row hide">
+                        <li class="tariff__description col-sm-6 col-lg-3">
                             <div class="tariff-description">
                                 <div class="tariff-description__top">
                                     <p class="tariff-description__space main-text main-text_semibold">2Gb места SSD </p>
@@ -183,7 +183,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="tariff__description col-3">
+                        <li class="tariff__description col-sm-6 col-lg-3">
                             <div class="tariff-description">
                                 <div class="tariff-description__top">
                                     <p class="tariff-description__space main-text main-text_semibold">7Gb места SSD </p>
@@ -214,7 +214,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="tariff__description col-3">
+                        <li class="tariff__description col-sm-6 col-lg-3 hide-m">
                             <div class="tariff-description">
                                 <div class="tariff-description__top">
                                     <p class="tariff-description__space main-text main-text_semibold">30Gb места SSD
@@ -246,7 +246,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="tariff__description col-3">
+                        <li class="tariff__description col-sm-6 col-lg-3 hide-m">
                             <div class="tariff-description">
                                 <div class="tariff-description__top">
                                     <p class="tariff-description__space main-text main-text_semibold">50Gb места SSDgit
@@ -279,6 +279,161 @@
                             </div>
                         </li>
                     </ul>
+                    <ul class="tariff__names row hide">
+                        <li class="tariff__block col-sm-6 col-lg-3 hide-w">
+                            <div class="tariff-block">
+                                <div class="tariff-block__image tariff-block__image_standart">
+                                    <img src="./img/tariff/helicopter.svg" alt="вертолет">
+                                </div>
+                                <div class="tariff-block__name header-3">стандарт</div>
+                            </div>
+                        </li>
+                        <li class="tariff__block col-sm-6 col-lg-3 hide-w">
+                            <div class="tariff-block">
+                                <div class="tariff-block__image tariff-block__image_business">
+                                    <img src="./img/tariff/rocket.svg" alt="космическая ракета">
+                                </div>
+                                <div class="tariff-block__name header-3">бизнес</div>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="tariff__infinity main-text hide-w-m">
+                        Неограниченно сайтов, баз данных MySQL, FTP аккаунтов и почтовых ящиков
+                    </div>
+                    <ul class="tariff__characteristics row hide">
+                        <li class="tariff__description col-sm-6 col-lg-3 hide-w">
+                            <div class="tariff-description">
+                                <div class="tariff-description__top">
+                                    <p class="tariff-description__space main-text main-text_semibold">30Gb места SSD
+                                    </p>
+                                    <div class="tariff-description__text mini-text">
+                                        <p>PHP - 5.6, 7.0, 7.1, 7.2, 7.3, 7.4</p>
+                                        <p>Поддержка любой CMS</p>
+                                        <p>Бесплатные SSL сертификаты Let's Encrypt</p>
+                                        <p>Защита от DDoS</p>
+                                        <p>Повышенная производительность</p>
+                                        <p>Домен в подарок</p>
+                                    </div>
+                                </div>
+                                <div class="tariff-description__bottom">
+                                    <div class="tariff-description__price">
+                                        <div class="tariff-description__new-price">
+                                            <div></div>
+                                            <p class="header-3">290 ₽</p>
+                                            <p>в месяц</p>
+                                        </div>
+                                        <div class="tariff-description__old-price">
+                                            <p>117 ₽</p>
+                                            <p>в месяц</p>
+                                        </div>
+                                    </div>
+                                    <button
+                                        class="tariff-description__button button button_blue button-text button-text_small">Купить
+                                        хостинг</button>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="tariff__description col-sm-6 col-lg-3 hide-w">
+                            <div class="tariff-description">
+                                <div class="tariff-description__top">
+                                    <p class="tariff-description__space main-text main-text_semibold">50Gb места SSDgit
+                                    </p>
+                                    <div class="tariff-description__text mini-text">
+                                        <p>PHP - 5.6, 7.0, 7.1, 7.2, 7.3, 7.4</p>
+                                        <p>Поддержка любой CMS</p>
+                                        <p>Бесплатные SSL сертификаты Let's Encrypt</p>
+                                        <p>Защита от DDoS</p>
+                                        <p>Повышенная производительность</p>
+                                        <p>Домен в подарок</p>
+                                    </div>
+                                </div>
+                                <div class="tariff-description__bottom">
+                                    <div class="tariff-description__price">
+                                        <div class="tariff-description__new-price">
+                                            <div></div>
+                                            <p class="header-3">470 ₽</p>
+                                            <p>в месяц</p>
+                                        </div>
+                                        <div class="tariff-description__old-price">
+                                            <p>117 ₽</p>
+                                            <p>в месяц</p>
+                                        </div>
+                                    </div>
+                                    <button
+                                        class="tariff-description__button button button_blue button-text button-text_small">Купить
+                                        хостинг</button>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul class="tariff__characteristics show-m">
+                        <li class="tariff__card">
+                            <div class="tariff__block">
+                                <div class="tariff-block">
+                                    <div class="tariff-block__image">
+                                        <img src="./img/tariff/baloon.svg" alt="воздушный шар">
+                                    </div>
+                                    <div class="tariff-block__name header-3">мини</div>
+                                </div>
+                            </div>
+                            <div class="tariff__wrapper">
+                                <div class="tariff__infinity main-text">
+                                    Неограниченно сайтов, баз данных MySQL, FTP аккаунтов и почтовых ящиков
+                                </div>
+                                <div class="tariff__description">
+                                    <div class="tariff-description">
+                                        <div class="tariff-description__top">
+                                            <p class="tariff-description__space main-text main-text_semibold">2Gb места
+                                                SSD
+                                            </p>
+                                            <div class="tariff-description__text mini-text">
+                                                <p>PHP - 5.6, 7.0, 7.1, 7.2, 7.3, 7.4</p>
+                                                <p>Поддержка любой CMS</p>
+                                                <p>Бесплатные SSL сертификаты Let's Encrypt</p>
+                                                <p>Защита от DDoS</p>
+                                            </div>
+                                        </div>
+                                        <div class="tariff-description__bottom">
+                                            <div class="tariff-description__price">
+                                                <div class="tariff-description__new-price">
+                                                    <div></div>
+                                                    <p class="header-3">99 ₽</p>
+                                                    <p>в месяц</p>
+                                                </div>
+                                                <div class="tariff-description__old-price">
+                                                    <p>117 ₽</p>
+                                                    <p>в месяц</p>
+                                                </div>
+                                            </div>
+                                            <button
+                                                class="tariff-description__button button button_blue button-text button-text_small">Купить
+                                                хостинг</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="tariff__all-characteristics link">
+                        <a href="#">Посмотреть все характеристики нашего хостинга</a>
+                    </div>
+                    <div class="tariff__additions tarift-additions row">
+                        <div class="tariff-additions__image col-12 col-md-6">
+                            <img src="./img/tariff/additions.png" alt="ноутбук, сервер и возможности">
+                        </div>
+                        <div class="tariff-additions__info col-12 col-md-6">
+                            <h4 class="tariff-additions__title header-4">Вместе с хостингом Вы получите</h4>
+                            <ul class="tariff-additions__items">
+                                <li class="tariff-additions__item"><span></span>30 дней на тестовый период + 100%
+                                    возврат денег, если
+                                    хостинг не подойдёт</li>
+                                <li class="tariff-additions__item"><span></span>Хостинг в подарок при оплате тарифа на 1
+                                    год</li>
+                                <li class="tariff-additions__item"><span></span>Бесплатный перенос сайта от другого
+                                    хостинг-провайдера</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
