CMS section responsive

--- a/src/index.html
+++ b/src/index.html
@@ -436,6 +436,60 @@
                     </div>
                 </div>
             </section>
+            <section class="cms">
+                <div class="cms__container container">
+                    <h2 class="cms__title header-2">Хостинг с поддержкой любой CMS</h2>
+                    <div class="cms__about main-text">
+                        <p>На нашем виртуальном хостинге вы сможете разместить сайт на <span
+                                class="main-text_semibold">любой CMS,</span> а также установить в два клика любую
+                            популярную систему управлению сайтом</p>
+                    </div>
+                    <ul class="cms__items">
+                        <li class="cms__item">
+                            <img src="./img/cms/1c-bitrix.png" alt="1С-Битрикс CMS">
+                        </li>
+                        <li class="cms__item">
+                            <img src="./img/cms/wordpress.png" alt="Wordpress CMS">
+                        </li>
+                        <li class="cms__item">
+                            <img src="./img/cms/joomla.png" alt="Joomla CMS">
+                        </li>
+                        <li class="cms__item">
+                            <img src="./img/cms/modx.png" alt="Modx CMS">
+                        </li>
+                        <li class="cms__item">
+                            <img src="./img/cms/opencart.png" alt="Opencart CMS">
+                        </li>
+                        <li class="cms__item">
+                            <img src="./img/cms/umi.png" alt="Umi CMS">
+                        </li>
+                        <li class="cms__item">
+                            <img src="./img/cms/drupal.png" alt="Drupal CMS">
+                        </li>
+                        <li class="cms__item">
+                            <img src="./img/cms/instant.png" alt="Instant CMS">
+                        </li>
+                        <li class="cms__item">
+                            <img src="./img/cms/netcat.png" alt="Netcat CMS">
+                        </li>
+                        <li class="cms__item">
+                            <img src="./img/cms/phpBB.png" alt="phpBB CMS">
+                        </li>
+                        <li class="cms__item">
+                            <img src="./img/cms/shop-script.png" alt="Shop-Script CMS">
+                        </li>
+                        <li class="cms__item">
+                            <img src="./img/cms/data-life-engine.png" alt="DataLife Engine CMS">
+                        </li>
+                        <li class="cms__item">
+                            <img src="./img/cms/host.png" alt="Host CMS">
+                        </li>
+                        <li class="cms__item">
+                            <img src="./img/cms/presta-shop.png" alt="Presta Shop CMS">
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <footer class="footer">
 
