Sll section is in prosess

--- a/src/index.html
+++ b/src/index.html
@@ -490,6 +490,64 @@
                     </ul>
                 </div>
             </section>
+            <section class="sll">
+                <div class="sll__container container">
+                    <h2 class="sll__title header-2">SSL-сертификаты</h2>
+                    <div class="sll__about main-text">
+                        <p>Купить SSL и попасть в TOP Google. WSHOST предлагает низкие цены и быстрый выпуск за счет
+                            <span class="main-text_semibold">уникальных</span> партнерских условий с удостоверяющими
+                            центрами.
+                        </p>
+                        <p>Подберите сертификат исходя из задач и предпочтений, удобные фильтры и описание помогут
+                            определиться </p>
+                    </div>
+                    <ol class="sll__cards row">
+                        <li class="sll__card col-3">
+                            <div class="sll-card">
+                                <div class="sll-card__header">
+                                    SSL для сайта Comodo PositiveSSL
+                                </div>
+                                <div class="sll-card__text mini-text">
+                                    <p>Доступен физическим лицам</p>
+                                    <p>Защита 1го домена
+                                    </p>
+                                    <p>Поддержка IDN доменов
+                                    </p>
+                                    <p>Низкая степень доверия
+                                    </p>
+                                    <p>Совместимость с браузерами: 96%</p>
+                                    <p>Автоустановка на наш хостинг</p>
+                                </div>
+                                <div class="sll-card__price">
+                                    <span>900 ₽</span>/ год
+                                </div>
+                            </div>
+                        </li>
+                        <li class="sll__card col-3">
+                            <div class="sll-card">
+                                <div class="sll-card__header">
+                                    SSL для магазина Positive SSL MDC (3 domains)
+                                </div>
+                                <div class="sll-card__text mini-text">
+                                    <p>Доступен физическим лицам</p>
+                                    <p>Защита 3х доменов</p>
+                                    <p>Опция добавления доменов
+                                    </p>
+                                    <p>Поддержка IDN доменов
+                                    </p>
+                                    <p>Достаточная степень доверия
+                                    </p>
+                                    <p>Совместимость с браузерами: 99.8%</p>
+                                    <p>Автоустановка на наш хостинг</p>
+                                </div>
+                                <div class="sll-card__price">
+                                    <span>3800 ₽</span>/ год
+                                </div>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+            </section>
         </main>
         <footer class="footer">
 
