SLL section done reasponsive

--- a/src/index.html
+++ b/src/index.html
@@ -502,7 +502,7 @@
                             определиться </p>
                     </div>
                     <ol class="sll__cards row">
-                        <li class="sll__card col-3">
+                        <li class="sll__card col-12 col-sm-6 col-lg-3">
                             <div class="sll-card">
                                 <div class="sll-card__header">
                                     SSL для сайта Comodo PositiveSSL
@@ -523,7 +523,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="sll__card col-3">
+                        <li class="sll__card col-12 col-sm-6 col-lg-3">
                             <div class="sll-card">
                                 <div class="sll-card__header">
                                     SSL для магазина Positive SSL MDC (3 domains)
@@ -545,7 +545,53 @@
                                 </div>
                             </div>
                         </li>
+                        <li class="sll__card col-12 col-sm-6 col-lg-3">
+                            <div class="sll-card">
+                                <div class="sll-card__header">
+                                    С защитой поддоменов Essential SSL Wildcard
+                                </div>
+                                <div class="sll-card__text mini-text">
+                                    <p>Доступен физическим лицам</p>
+                                    <p>Защита всех поддоменов</p>
+                                    <p>Поддержка IDN доменов
+                                    </p>
+                                    <p>Достаточная степень доверия
+                                    </p>
+                                    <p>Совместимость с браузерами: 99.8%</p>
+                                    <p>Автоустановка на наш хостинг</p>
+                                </div>
+                                <div class="sll-card__price">
+                                    <span>6700 ₽</span>/ год
+                                </div>
+                            </div>
+                        </li>
+                        <li class="sll__card col-12 col-sm-6 col-lg-3">
+                            <div class="sll-card">
+                                <div class="sll-card__header">
+                                    С зеленой строкой True BusinessID with EV
+                                </div>
+                                <div class="sll-card__text mini-text">
+                                    <p>Только для юридических лиц
+                                    </p>
+                                    <p>Защита одного домена
+                                    </p>
+                                    <p>Зеленая адресная строка
+                                    </p>
+                                    <p>Наивысшая степень доверия
+                                    </p>
+                                    <p>Без поддержки IDN</p>
+                                    <p>Совместимость с браузерами: 99.9%</p>
+                                    <p>Автоустановка на наш хостинг</p>
+                                </div>
+                                <div class="sll-card__price">
+                                    <span>12600 ₽</span>/ год
+                                </div>
+                            </div>
+                        </li>
                     </ol>
+                    <div class="sll__button">
+                        <button class="button button-text button-text_small">Заказать SSL сертификат</button>
+                    </div>
                 </div>
             </section>
         </main>
