Advantages section done responsive

--- a/src/index.html
+++ b/src/index.html
@@ -594,6 +594,47 @@
                     </div>
                 </div>
             </section>
+            <div>
+                <section class="names">
+                    <div class="names__container container">
+                        <h2 class="sll__title header-2">Доменные имена</h2>
+                    </div>
+                </section>
+            </div>
+            <section class="advantages">
+                <div class="advantages__container container">
+                    <h2 class="sll__title header-2">Выгоды нашего хостинга для Вас</h2>
+                    <ul class="advantages__items">
+                        <li class="advantages__item">
+                            <div class="advantages__image">
+                                <img src="./img/advantages/arrow-down.svg" alt="стрелочка вниз с долларом">
+                            </div>
+                            <div class="advantages__title main-text main-text_semibold">Низкие цены</div>
+                            <div class="advantages__text mini-text">Доступные цены всегда были приоритетом нашей
+                                компании.
+                                Партнерская программа поможет сэкономить ещё больше.</div>
+                        </li>
+                        <li class="advantages__item">
+                            <div class="advantages__image">
+                                <img src="./img/advantages/briefcase.svg" alt="портфель с шестиренкой">
+                            </div>
+                            <div class="advantages__title main-text main-text_semibold">Грамотная поддержка</div>
+                            <div class="advantages__text mini-text">Сотрудники с многолетним опытом в сфере хостинг
+                                услуг всегда
+                                оперативно помогут решить возникшие у клиентов трудности.</div>
+                        </li>
+                        <li class="advantages__item">
+                            <div class="advantages__image">
+                                <img src="./img/advantages/lock.svg" alt="замок">
+                            </div>
+                            <div class="advantages__title main-text main-text_semibold">Безопасность</div>
+                            <div class="advantages__text mini-text">Фильтрация паразитического трафика, защита от
+                                брут-форс атак
+                                помогут обеспечить сохранность данных клиентов.</div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <footer class="footer">
 
